<resources>
    <string name="app_name">Malaria Prevention</string>
    <string name="app_homescreen_name">PC Malaria Home</string>
    <string name="user_medicine_settings_activity_pc_logo">Peace Corps Logo</string>
    <string name="user_medicine_settings_activity_setup_label">Set Up</string>
    <string name="user_medicine_settings_activity_drug_take_label">I Take</string>
    <string name="user_medicine_settings_activity_time_pick_label">Remind me at:</string>
    <string name="user_medicine_settings_activity_time_pick_button">Pick Time</string>
    <string name="user_medicine_settings_activity_if_forget_label">If I forget</string>
    <string name="user_medicine_settings_activity_done_button">DONE</string>
    <string name="second_analytic_screen_title">SECOND ANALYTIC SCREEN</string>
    <string name="first_analytic_screen_doses_missing_text">Doses in a Row</string>
    <string name="first_analytic_screen_medicine_last_taken_text">Medicine Last Taken</string>
    <string name="first_analytic_screen_medicine_adherence_to_medicine_text">Adherence to Medicine</string>
    <string name="alarm_auto_start_boot_completed_intent_check">android.intent.action.BOOT_COMPLETED</string>
    <string name="alert_dialog_title">Malaria Medication Reminder</string>
    <string name="alert_dialog_message">Have you taken your drug today ?</string>
    <string name="user_medicine_settings_fragment_activity_title">PC Malaria Prevention</string>
    <string name="info_hub_title_label">Info Hub</string>
    <string name="plan_my_trip_label">Plan Trip</string>
    <string name="peace_corps_policy">Peace Corps Policy</string>
    <string name="percentage_of_side_effects">Percentage of Side Effects</string>
    <string name="side_effects_reported_by_PCVs">Side Effects Reported by PCVs</string>
    <string name="effectiveness_against_malaria">Effectiveness Against Malaria</string>
    <string name="volunteer_adherence_rates">Volunteer Adherence Rates</string>
    <string name="non_PCV_reported_side_effects">Non-PCV Reported Side Effects</string>
    <string name="location_label">Location:</string>
    <string name="cash_label">Cash to Bring:</string>
    <string name="pack_label">Packing List:</string>
    <string name="medication_label">Medication:</string>
    <string name="remind_label">Remind Me On:</string>
    <string name="trip_button_label">Generate</string>
    <string name="location_spinner_label">Choose Location</string>
    <string name="label_medicine_selector">Choose Drug</string>
    <string name="items_spinner_label">Pick Items</string>
    <string name="trip_select_string">Add Packing Items</string>
    <string name="dump_test">Fetching...</string>
    <string name="help_game_dialog_title">Game Info</string>
    <string name="help_game_dialog_buttonStart">Start the Game</string>
    <string name="help_game_dialog_heading">How to Play -</string>
    <string name="help_game_dialog_showNextTime">Show this help next time</string>
    <string name="help_rapid_fire_info">
        In this game, a question is given with 3 options. The questions have to be answered under 5 seconds.
    </string>
    <string name="help_rapid_fire_how_to_play">
        -> Read the question carefully, and quickly select one of the 3 options.\n
        -> For every correct option, a point is awarded.\n
        -> Exit the game by clicking on the \"Exit Game\" button.\n
    </string>
    <string name="help_myth_fact_info">
        In this game, a text is given. The text has to be classified as a myth or a fact.
    </string>
    <string name="help_myth_fact_how_to_play">
        -> Read the statement carefully and decide whether it is a myth or a fact.\n
        -> If it is a fact, drag it to the chest. If it is a myth, drag it to the trash bin.\n
        -> For every correct answer, a point is awarded.\n
        -> Click \"Next\" to go to next question, and \"Exit\" to exit the game.\n
    </string>
    <string name="help_rapid_fire_question_title">Every question is given with 3 options</string>
    <string name="help_rapid_fire_question_description">Read the question carefully, and quickly select one of the 3 options.</string>
    <string name="help_rapid_fire_score_title">For every correct option, a point is awarded</string>
    <string name="help_rapid_fire_timer_title">Timer shows seconds left for each question</string>
    <string name="help_rapid_fire_timer_description">The questions have to be answered under 5 seconds.</string>
    <string name="help_rapid_fire_exit_title">Exit the game by clicking here</string>
    <string name="help_myth_fact_question_title">Read the statement carefully</string>
    <string name="help_myth_fact_chest_title">If it is a fact, drag it to the chest</string>
    <string name="help_myth_fact_bin_title">If it is a myth, drag it to the trash bin</string>
    <string name="help_myth_fact_question_description">Decide whether it is a myth or a fact.</string>
    <string name="help_myth_fact_score_title">For every correct option, a point is awarded</string>
    <string name="help_myth_fact_exit_title">Exit the game by clicking here</string>
    <string name="help_myth_fact_next_title">Click \"Next\" to go to next question</string>
    <string name="help_myth_fact_next_description">For every question, it is disabled. You can not skip a question.</string>
    <string name="departuredate_currentdate">"Departure date cannot be less than current date"</string>
    <string name="arrivaldate_departuredate">"Arrival date cannot be before the Departure date"</string>
    <string name="drug_reminder_notification_title">Malaria Prevention</string>
    <string name="drug_reminder_notification_message">Take your Medicine!</string>
    <string name="drug_reminder_notification_action_snooze">Snooze</string>
    <string name="drug_reminder_notification_action_taken">Taken</string>
    <string name="drug_reminder_notification_action_not_taken">Not Taken</string>
    <string name="notification_action_code_not_taken">0</string>
    <string name="notification_action_code_taken">2</string>
    <string name="notification_action_code_snooze">1</string>
    <string name="shared_preferences_alarm_hour">com.peacecorps.malaria.AlarmHour</string>
    <string name="shared_preferences_alarm_minute">com.peacecorps.malaria.AlarmMinute</string>
    <string name="shared_preferences_weekly_date">com.peacecorps.malaria.weeklyDate</string>
    <string name="shared_preferences_is_weekly_drug_taken">com.peacecorps.malaria.isWeeklyDrugTaken</string>
    <string name="shared_preferences_date_drug_taken">com.peacecorps.malaria.dateDrugTaken</string>
    <string name="shared_preferences_is_drug_taken">com.peacecorps.malaria.isDrugTaken</string>
    <string name="shared_preferences_drug_rejected_count">com.peacecorps.malaria.drugRejectedCount</string>
    <string name="shared_preferences_drug_accepted_count">com.peacecorps.malaria.drugAcceptedCount</string>
    <string name="shared_preferences_store_time_picked">com.peacecorps.malaria.storeTimePicked</string>
    <string name="shared_prefs_myth_fact_game">showHelpMythFactGame</string>
    <string name="shared_prefs_rapid_fire_game">showHelpRapidFireGame</string>
    <string name="description_drugs">Drugs</string>
    <string name="description_med_status">Medication Status</string>
    <string name="description_prev_month">Previous Month</string>
    <string name="description_next_month">Next Month</string>
    <string name="description_calendar_days">Sunday Monday Tuesday Wednesday Thursday Friday Saturday</string>
    <string name="description_warning">Warning</string>
    <string name="description_med_last_taken">Medicine last taken</string>
    <string name="description_med_doses">Doses in a row</string>
    <string name="description_med_adherence">Adherence to medicine</string>
    <string name="description_drug_name">Drug name</string>
    <string name="description_drug_taken">Was drug taken today?</string>
    <string name="description_accept">Accept</string>
    <string name="description_change_data">Change data</string>
    <string name="description_peace_corps_logo">Peace Corps Logo</string>
    <string name="description_previous_locations">Previously entered locations</string>
    <string name="description_side_effects_graph">Graph for side effects</string>
    <string name="description_cash">Cash</string>
    <string name="description_add_other_items">Add other items</string>
    <string name="description_add_item">Add item</string>
    <string name="description_submit">Submit</string>
    <string name="description_delete_item">Delete item</string>
    <string name="description_effectiveness_graph">Graph for effectiveness</string>
    <string name="description_reset_data">Reset the data</string>
    <string name="description_badge_awarded">Your badges</string>
    <string name="description_badge_b1">Badge 1</string>
    <string name="description_badge_b3">Badge 2</string>
    <string name="description_badge_b5">Badge 3</string>
    <string name="description_badge_newbie">Newbie badge</string>
    <string name="description_badge_hat">Hat badge</string>
    <string name="description_"></string>
    <string name="med_option_one">Malarone</string>
    <string name="med_option_two">Doxycycline</string>
    <string name="med_option_three">Mefloquine</string>
    <string name="label_medication_type">Medication Type</string>
    <string name="label_user_age">Age</string>
    <string name="label_user_email">Email</string>
    <string name="label_user_name">Name</string>
    <string name="label_user_profile">User Profile</string>
    <string name="label_save">SAVE</string>
    <string name="label_home">Home</string>
    <string name="label_trip">Trip</string>
    <string name="label_info_hub">InfoHub</string>
    <string name="label_game">Game</string>
    <string name="label_profile">Profile</string>
    <string name="label_badge_room">Badge Room</string>
    <string name="label_rapid_fire">Rapid Fire</string>
    <string name="label_myth_vs_fact">Myth Vs Fact</string>
    <string name="label_medicine_store">Medicine Store</string>
    <string name="label_add_medicine_to_store">Add Medicine to Store</string>
    <string name="label_add">Add</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_enter_medicine_dose">Enter the doses of medicines you want to add in store.</string>
    <string name="label_settings">Settings</string>
    <string name="label_sample_text">This is sample text</string>
    <string name="label_set">Set</string>
    <string name="label_myth_fact_total_score">%d</string>
    <string name="label_exit">Exit</string>
    <string name="label_exit_game">Exit Game</string>
    <string name="label_next">Next</string>
    <string name="label_question">Question Here</string>
    <string name="hint_user_medicine_type">Enter the medicine you take</string>
    <string name="hint_user_age">Age in years</string>
    <string name="hint_email_address">Enter Your Email Address</string>
    <string name="hint_user_name">Enter Your Name</string>
    <string name="reset">Reset</string>
    <string name="hint_eg_7">Eg 7</string>
    <string name="warning_reminder_weeks">How many weeks before your medicine ends, do you want to get the reminder?</string>
    <string name="warning_reminder_days">How many days before your medicine ends, do you want to get the reminder?</string>
    <string name="error_store_alert_reminder">Entry Valid Number, Max 30</string>
    <string name="wrong">Wrong</string>
    <string name="myth">myth</string>
    <string name="fact">fact</string>
    <string name="label_rapid_fire_total_score">Score : %1$d</string>
    <string name="heading_packing_item">Packing Items</string>
    <string name="label_select_pill">Select Pill</string>
    <string name="label_cash">Cash</string>
    <string name="hint_money">$</string>
    <string name="hint_add_items">Add Items</string>
</resources>