<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/upperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_info_hub_reset"
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_5dp"
            android:adjustViewBounds="true"
            android:background="@drawable/btn_reset"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:contentDescription="@string/description_peace_corps_logo"
                android:drawableTop="@drawable/peacecorps_small"
                android:text="@string/info_hub_title_label"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstButtonSet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_110dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_peace_corps_policy"
            style="@style/style_btn_info_hub"
            android:text="@string/peace_corps_policy" />

        <Button
            android:id="@+id/btn_percent_side_effects"
            style="@style/style_btn_info_hub"
            android:text="@string/percentage_of_side_effects" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/secondButtonSet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_110dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_side_effects_pcv"
            style="@style/style_btn_info_hub"
            android:text="@string/side_effects_reported_by_PCVs" />

        <Button
            android:id="@+id/btn_side_effects_non_pcv"
            style="@style/style_btn_info_hub"
            android:text="@string/non_PCV_reported_side_effects" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdButtonSet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_110dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_volunteer_adherence"
            style="@style/style_btn_info_hub"
            android:text="@string/volunteer_adherence_rates" />

        <Button
            android:id="@+id/btn_effectiveness"
            style="@style/style_btn_info_hub"
            android:text="@string/effectiveness_against_malaria" />

    </LinearLayout>
</LinearLayout>
