<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".code.activities.TripIndicatorFragmentActivity">

    <TextView
        style="@style/HeadingTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:padding="@dimen/padding_10dp"
        android:text="@string/heading_packing_item" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10dp">


        <ImageView
            android:layout_width="@dimen/size_60dp"
            android:layout_height="@dimen/size_60dp"
            android:adjustViewBounds="true"
            android:background="@drawable/drug_normal"
            android:contentDescription="@string/description_drug_name"
            android:padding="@dimen/padding_5dp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/drugName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/quantity"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/label_select_pill"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginLeft="@dimen/margin_50dp"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_marginStart="@dimen/margin_50dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/size_60dp"
            android:layout_height="@dimen/size_60dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cash"
            android:contentDescription="@string/description_cash"
            android:padding="@dimen/padding_5dp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/cash_amnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/label_cash"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <EditText
            android:id="@+id/cash_et"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/button_background"
            android:hint="@string/hint_money"
            android:inputType="number"
            android:padding="@dimen/padding_5dp"
            android:textColorHint="@color/lightgray" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10dp">

        <ImageView
            android:layout_width="@dimen/size_60dp"
            android:layout_height="@dimen/size_60dp"
            android:adjustViewBounds="true"
            android:background="@drawable/packing_bag"
            android:contentDescription="@string/description_add_other_items"
            android:padding="@dimen/padding_5dp"
            android:scaleType="fitCenter" />

        <EditText
            android:id="@+id/packing_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:hint="@string/hint_add_items"
            android:inputType="text"
            android:maxWidth="@dimen/width_110dp"
            android:textColor="@color/textColorPrimary" />

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cream"
            android:contentDescription="@string/description_add_item"
            android:src="@drawable/plus" />

        <ImageButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cream"
            android:contentDescription="@string/description_submit"
            android:src="@drawable/enter" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cream"
            android:contentDescription="@string/description_delete_item"
            android:src="@drawable/delete" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_140dp">

        <ListView
            android:id="@+id/listV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_green"
            android:divider="#ff988455"
            android:dividerHeight="@dimen/height_1dp"
            android:headerDividersEnabled="true" />
    </RelativeLayout>

</LinearLayout>