<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogReset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/label_add_medicine_to_store"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.96"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_medicine_quantity"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_eg_7"
            android:inputType="number"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/lightgray02"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/label_enter_medicine_dose"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dialog_add_medicine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/label_add"
            android:textColor="@color/textColorPrimary" />

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/label_cancel"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>

</LinearLayout>