<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_60dp"
        android:height="@dimen/size_60dp"
        android:gravity="left|top"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/prevMonth"
            android:layout_width="@dimen/width_20dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:contentDescription="@string/description_prev_month"
            android:src="@drawable/calendar_left_arrow_selector" />

        <TextView
            android:id="@+id/currentMonth"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_60dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/nextMonth"
            android:layout_width="@dimen/width_20dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_10dp"
            android:contentDescription="@string/description_next_month"
            android:src="@drawable/calendar_right_arrow_selector" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/calendarheader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/description_calendar_days"
            android:src="@drawable/calender_header_vertorizedy" />

    </LinearLayout>

    <GridView
        android:id="@+id/calendar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="7" />

</LinearLayout>